# Autogen_Framework

./: .cursorignore  .gitignore  package-lock.json  package.json  pyproject.toml  requirements.txt  test.excalidraw
AI Interview project/: Interview_team.py
AIAGent_Team/: Managing Teams.ipynb  RoundRobin_agents.ipynb  Swarm_team.py  team_history.json
AgentChat/: Structured_output.ipynb
Agents/: CodeExecutorAgent.py
AnalyserGPT/Agents/: CodeExecutorAgent.py  DataAnalyserAgent.py
AnalyserGPT/Agents/prompts/: DataAnalyzerPrompt.py
AnalyserGPT/Config/: Constants.py  Docker_utils.py  openai_model_client.py
AnalyserGPT/Teams/: AnalyserGptTeam.py
Autogen Basics/: AgentChat_first_agent.ipynb  Agent_with_tools.ipynb  First_autogen_Agent.ipynb  Prompt_engineering_customization.ipynb  multimodal_agent.ipynb
Human_in_loop/: Human_interaction.py
Research_Report_generation_Project/: README.md  project.excalidraw
Research_Report_generation_Project/agents/: researcher_agent.py
Research_Report_generation_Project/config/: config.py
SelectorGroupChat/: selector_agent.ipynb  selector_agent.py  serializing_components.ipynb  test.txt
dir/: autogen04202.db  database.sqlite
dir/alembic/versions/: c6b7fc834c78_initial_schema.py
