[project]
name = "autogen-agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.6.1",
    "autogen-core>=0.6.1",
    "autogen-ext[docker,langchain,openai]>=0.6.1",
    "autogenstudio>=0.1.5",
    "ddgs>=9.2.3",
    "duckduckgo-search>=8.1.1",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.21",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
